# HomeWork_19.2

./: .gitignore  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/migrations/: 0004_alter_product_created_at_alter_product_updated_at.py  0005_blog.py  0006_alter_blog_is_published.py  0007_version.py  0008_product_owner.py  0009_product_is_published.py  0010_alter_product_options.py  0012_version.py  0013_alter_version_product.py  0014_alter_version_product.py  0015_alter_version_product.py
catalog/templates/: home.html  my_tags.py  product.html
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  product.html  product_confirm_delete.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/managment/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: password_reset.html
users/templates/users/: login.html  register.html
