[tool.poetry]
name = "hw19-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "HomeWork_19.2"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytils = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"